tests/fixtures/negative/naming/VariableNaming.kt
package com.example.naming

fun example() {
    val goodName = 1
    var anotherGood = "correct"
    val x = 42
}
